2011-09-06  Ulrich Drepper  <drepper@gmail.com>

	* sysdeps/unix/sysv/linux/x86_64/clock_gettime.c: New file.
	* sysdeps/unix/sysv/linux/clock_gettime.c (SYSCALL_GETTIME): Allow
	already be defined.  Change to take two parameters and don't assign
	result to variable.  Adjust all users.
	Define INTERNAL_GETTIME if not already defined.
	Use INTERNAL_GETTIME instead of INTERNAL_VSYSCALL got clock_gettime
	call.
	* sysdeps/unix/sysv/linux/x86_64/sysdep.h: Don't define
	HAVE_CLOCK_GETTIME_VSYSCALL.
	* sysdeps/unix/clock_gettime.c: Adjust use of SYSDEP_GETTIME_CPU.

	* sysdeps/unix/sysv/linux/getsysstats.c (__get_nprocs): Don't use
	gettimeofday vsyscall, just use time.

2011-09-06  Andreas Schwab  <schwab@redhat.com>

	* sysdeps/unix/sysv/linux/x86_64/gettimeofday.c [!SHARED]: Include
	<errno.h>.

2011-09-06  Ulrich Drepper  <drepper@gmail.com>

	* sysdeps/unix/sysv/linux/kernel-features.h: Add entry for getcpu
	syscall on x86-64.
	* sysdeps/unix/sysv/linux/x86_64/gettimeofday.c [!SHARED]: Use real
	syscall.
	* sysdeps/unix/sysv/linux/x86_64/time.c: Likewise.
	* sysdeps/unix/sysv/linux/x86_64/sched_getcpu.S [!SHARED]: Use real
	syscall if possible.

2011-09-05  Ulrich Drepper  <drepper@gmail.com>

	* elf/pldd.c (get_process_info): Don't read whole ELF header, just
	e_ident.  Don't pass to find_mapsXX.
	* elf/pldd-xx.c (find_mapsXX): Remove second parameter.

2011-07-20  Liubov Dmitrieva  <liubov.dmitrieva@intel.com>

	* sysdeps/x86_64/multiarch/Makefile (sysdep_routines): Add
	strchr-sse2-no-bsf strrchr-sse2-no-bsf
	* sysdeps/x86_64/multiarch/strchr.S: Update.
	Check bit_slow_BSF bit.
	* sysdeps/x86_64/multiarch/strrchr.S: Likewise.
	* sysdeps/x86_64/multiarch/strchr-sse2-no-bsf.S: New file.
	* sysdeps/x86_64/multiarch/strrchr-sse2-no-bsf.S: New file.

2011-09-05  Ulrich Drepper  <drepper@gmail.com>

	[BZ #13134]
	* sysdeps/posix/spawni.c (script_execute): Define only for compatibility
	before glibc 2.15.
	(tryshell): Define.