@@ -1,5 +1,5 @@
 /* Assembler macros for x86-64.
-   Copyright (C) 2001, 2002, 2003 Free Software Foundation, Inc.
+   Copyright (C) 2001, 2002, 2003, 2011 Free Software Foundation, Inc.
    This file is part of the GNU C Library.
 
    The GNU C Library is free software; you can redistribute it and/or
@@ -113,5 +113,7 @@ lose:									      \
 #  define L(name)	name
 # endif
 #endif
+
+#define atom_text_section .section ".text.atom", "ax"
 
 #endif	/* __ASSEMBLER__ */
